clean up and fixes
